--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -79,7 +79,6 @@
                     <span class="todo__date"></span>
                   </label>
                   <ul class="todo__buttons">
-                    <!-- List is used to support future additional buttons -->
                     <li>
                       <button class="todo__delete-btn" type="button"></button>
                     </li>
@@ -88,8 +87,9 @@
               </template>
             </ul>
           </section>
-          <script src="./pages/index.js" defer></script>
-          <script src="./scripts/validate.js" defer></script>
+
+          <!-- Updated for ES Modules -->
+          <script src="./pages/index.js" type="module"></script>
         </main>
       </div>
     </div>
